2009-12-07  Sam Couter <sam@couter.id.au>
	* AUTHORS: add Sam to AUTHORS
	* device-src/device.c device-src/Makefile.am
	  device-src/dvdrw-device.c: new dvd-rw device
	* configure.in config/amanda/dvdrw-device.m4: config
	  for it
	* device-src/vfs-device.c device-src/vfs-device.h: enable
	  subclassing of VFS device
	* man/xml-source/amanda-devices.7.xml: documentation
	* server-src/amcheck-device.pl: add usage() sub

2009-12-07  Sam Couter <sam@couter.id.au>
	* man/Makefile.am man/xml-source/*: fix documentation so out-of-tree
					  builds work

2009-12-07  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c: fix check_running_as.

2009-12-06  Dustin J. Mitchell <dustin@zmanda.com>
	* client-src/client_util.c: revert previous change

2009-12-05  Sam Couter <sam@couter.id.au>
	* client-src/client_util.c: Free correct memory

2009-12-05  Dustin J. Mitchell <dustin@zmanda.com>
	* config/automake/scripts.am: remove unnecessary -T
	* perl/Amanda/BigIntCompat.pm: remove unused $stringify

2009-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Give error if pre-host-backup or
				post-host-backup are executed on client.
	* man/xml-source/amanda.conf.5.xml: Document it.

2009-12-03  Paul C. Mantz <pcmantz@zmanda.com>
	* server-src/tapefile.c server-src/tapefile.h
          perl/Amanda/Tapelist.swg installcheck/Amanda_Tapelist.pl:
          added and swigged get_last_reusable_tape_label(). 
	
2009-12-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scan/traditional.pm: continue the scan on inuse
						 error.

2009-12-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scan/traditional.pm: Release reservation on error.

2009-12-01  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Device.swg: #include "glib-util.h".

2009-12-01  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix conf_init_data_path argument type.
	* common-src/debug.c: Use gpointer.