@@ -811,6 +811,7 @@ struct ndm_tape_agent {
 	int			tape_fd;
 	char			drive_name[128];
 	int			weof_on_close;
+	int			sent_leom;
 
 	/* MOVER */
 	ndmp9_mover_get_state_reply mover_state;
